@@ -1,3 +1,6 @@
+* Added variable conversion from latitude/longitude per vertical profile point
+  to single (mid-point) latitude/longitude for profile.
+
 * Variable conversions for altitude and pressure bounds now also work when
   they are dependend on latitude and longitude dimensions.
 
